--- a/README
+++ b/README
@@ -1,3 +1,13 @@
-# Dockerized $PROGRAM_NAME
-![Build status](https://github.com/zewelor/$REPO_NAME/workflows/Build/badge.svg)
-[![Download](https://img.shields.io/docker/pulls/zewelor/$REPO_NAME.svg?style=for-the-badge)](https://hub.docker.com/r/joonas/spotifyd/)
+# Scaffold builder for alpine based docker single app image
+
+It generates repo with gh actions workflow, Dockerfile and readme
+
+## Run
+
+To build new app
+
+```
+./build.sh app_name
+```
+
+It will create new app in scaffold directory. Copy it to new location
